# pysubs3

./: README.md  makefile  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: conf.py  tutorial.rst
pysubs3/: __init__.py  __main__.py  cli.py  common.py  exceptions.py  formatbase.py  formats.py  jsonformat.py  microdvd.py  mpl2.py  ssaevent.py  ssafile.py  ssastyle.py  subrip.py  substation.py  time.py  timestamps.py  tmp.py  version.py  webvtt.py  whisper.py
pysubs3/lang_detector/: __init__.py
tests/: test_attachment.py  test_cli.py  test_common.py  test_formats.py  test_json.py  test_microdvd.py  test_mpl2.py  test_parse_tags.py  test_ssaevent.py  test_ssafile.py  test_ssastyle.py  test_subrip.py  test_substation.py  test_time.py  test_timestamps.py  test_tmp.py  test_vtt.py  test_whisper.py
tests/data/timestamps/test_video_23.976/: generate_test_video.py
