[metadata]
name = pysubs3
version = attr: pysubs3.common.VERSION
author = Tomas Karabela
author_email = tkarabela@seznam.cz
description = A library for editing subtitle files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imvladikon/pysubs3
keywords = SubStation, SubRip, MicroDVD, MPL2, WebVTT, ass, srt, sub, vtt, subtitles, captions
license = MIT
project_urls =
    Documentation = https://github.com/imvladikon/pysubs3
    Bug Tracker = https://github.com/imvladikon/pysubs3/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Multimedia :: Video
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Typing :: Typed

[options]
packages = pysubs3
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pysubs3 = pysubs3.cli:__main__

[mypy]
files = pysubs3, tests/test_*.py

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
